# xiyu-translator

./: .env.example  LICENSE  README.md  pyproject.toml  setup.py
examples/: __init__.py  usage_examples.py
tests/: __init__.py  test_import.py  test_translator.py
xiyu_translator/: __init__.py  core.py
